
  NEW FEATURES

  IMPROVEMENTS

    HADOOP-10139. Update and improve the Single Cluster Setup document.
    (Akira Ajisaka via Arpit Agarwal)

    HADOOP-10295. Allow distcp to automatically identify the checksum type of 
    source files and use it for the target. (jing9 and Laurent Goujon)

    HADOOP-10333. Fix grammatical error in overview.html document.
    (René Nyffenegger via suresh)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-10320. Javadoc in InterfaceStability.java lacks final </ul>.
    (René Nyffenegger via cnauroth)
    
    HADOOP-10085. CompositeService should allow adding services while being 
    inited. (Steve Loughran via kasha)

    HADOOP-10327. Trunk windows build broken after HDFS-5746.
    (Vinay via cnauroth)

    HADOOP-10330. TestFrameDecoder fails if it cannot bind port 12345.
    (Arpit Agarwal)

    HADOOP-10326. M/R jobs can not access S3 if Kerberos is enabled. (bc Wong
    via atm)

    HADOOP-10338. Cannot get the FileStatus of the root inode from the new
    Globber (cmccabe)

Release 2.3.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES 

Release 2.3.0 - 2014-02-18

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-8545. Filesystem Implementation for OpenStack Swift
    (Dmitry Mezhensky, David Dobbins, Stevel via stevel)

  IMPROVEMENTS

    HADOOP-10046. Print a log message when SSL is enabled.
    (David S. Wang via wang)

    HADOOP-10079. log a warning message if group resolution takes too long.
    (cmccabe)

    HADOOP-9623. Update jets3t dependency to 0.9.0 (Amandeep Khurana via Colin
    Patrick McCabe)

    HADOOP-10132. RPC#stopProxy() should log the class of proxy when IllegalArgumentException 
    is encountered (Ted yu via umamahesh)

    HADOOP-10248. Property name should be included in the exception where property value 
    is null (Akira AJISAKA via umamahesh)

    HADOOP-10086. User document for authentication in secure cluster.